@@ -1,3 +1,8 @@
+2001-07-26  Mark Kettenis  <kettenis@gnu.org>
+
+	* hurd/hurdsig.c (_hurd_internal_post_signal): Fix handling of
+	SA_RESETHAND and SA_NODEFER.
+
 2001-07-27  Ulrich Drepper  <drepper@redhat.com>
 
 	* libio/fileops.c (_IO_new_file_fopen): Correctly locate ccs=
